<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>SapphireRain</groupId>
  <artifactId>SapphireRain</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>jar</packaging>
  
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	<jdk.version>1.8</jdk.version>
	<junit.version>5.0.0-M4</junit.version>
  </properties>
  
  <dependencies>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>${junit.version}</version>
    <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
	<finalName>SapphireRain</finalName>
  
    <sourceDirectory>src</sourceDirectory>
    <testSourceDirectory>test</testSourceDirectory>
	
	<resources>
	  <resource>
		<directory>resources</directory>
	  </resource>
    </resources>
	
    <plugins>
	  <!-- JUnit surefire -->
	  <plugin>
		<artifactId>maven-surefire-plugin</artifactId>
		<version>2.19</version>
		<dependencies>
          <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-surefire-provider</artifactId>
            <version>1.0.0-M4</version>
          </dependency>
		</dependencies>
	  </plugin>
	
	  <!-- sources -->
	  <plugin>
	    <groupId>org.apache.maven.plugins</groupId>
	    <artifactId>maven-eclipse-plugin</artifactId>
		<version>2.9</version>
		<configuration>
		  <downloadSources>true</downloadSources>
		  <downloadJavadocs>false</downloadJavadocs>
		</configuration>
	  </plugin>
	
	  <!-- compiler -->
      <plugin>
	    <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.2</version>
        <configuration>
          <source>${jdk.version}</source>
          <target>${jdk.version}</target>
		  <compilerArgument>-Xlint:all</compilerArgument>
          <showWarnings>true</showWarnings>
          <showDeprecation>true</showDeprecation>
        </configuration>
      </plugin>
	  
	  <!-- code coverage -->
	  <plugin>
		<groupId>org.codehaus.mojo</groupId>
		<artifactId>cobertura-maven-plugin</artifactId>
		<version>2.7</version>
		<configuration>
		  <formats>
			<format>html</format>
			<format>xml</format>
		  </formats>
		  <instrumentation>
		    <excludes>
			  <exclude>com/sr/main/Main.class</exclude>
			</excludes>
		  </instrumentation>
		<check />
		</configuration>
	  </plugin>
	  
	  <!-- executable jar -->
	  <plugin>
	    <groupId>org.apache.maven.plugins</groupId>
	    <artifactId>maven-jar-plugin</artifactId>
		<version>3.0.2</version>
		<configuration>
		  <archive>
		    <manifest>
			  <addClasspath>true</addClasspath>
			  <mainClass>com.sr.main.Main</mainClass>
			</manifest>
		  </archive>
		</configuration>
	  </plugin>
	  
	  <!-- copy dependencies -->
	  <plugin>
	    <groupId>org.apache.maven.plugins</groupId>
	    <artifactId>maven-dependency-plugin</artifactId>
		<version>2.5.1</version>
		<executions>
		  <execution>
		    <id>copy-dependencies</id>
			<phase>package</phase>
			<goals>
			  <goal>copy-dependencies</goal>
			</goals>
			<configuration>
			  <includeScope>runtime</includeScope>
			  <outputDirectory>${project.build.directory}/dependency-jars/</outputDirectory>
			</configuration>
		  </execution>
		</executions>
	  </plugin>
	  
	  <!-- copy resources -->
	  <plugin>
		<artifactId>maven-resources-plugin</artifactId>
		<version>3.0.1</version>
		<executions>
          <execution>
            <id>copy-resources</id>
            <phase>validate</phase>
            <goals>
              <goal>copy-resources</goal>
            </goals>
            <configuration>
              <outputDirectory>${project.build.directory}/resources/</outputDirectory>
              <resources>
                <resource>
                  <directory>resources</directory>
                  <filtering>true</filtering>
                </resource>
              </resources>              
            </configuration>            
          </execution>
        </executions>
	  </plugin>
	  
	  <!-- generate javadocs -->
	  <plugin>
		<groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>2.10.4</version>
	  </plugin>
    </plugins>
  </build>
</project>